--- a/aplusb/config.yml
+++ b/aplusb/config.yml
@@ -1,7 +1,7 @@
-title: hello world
-author:
+title: A+B problem
+author: 
 - anomyous
-date: 2021-12-26 07:00:00
+date: 2022-01-08 14:40:00
 license:
   code: AGPL
   docs: CC BY-SA 4.0
@@ -12,4 +12,3 @@ tags:
     - None
 time_limit: 1s
 memory_limit: 128MB
-
