feat: add problem: [Template] Binary Index Tree 1
This is the first problem that allows limiting the data range of generator in the checker.

--- a/aplusb/config.yml
+++ b/aplusb/config.yml
@@ -4,8 +4,8 @@ author:
 date: 2022-01-08 14:40:00
 license:
   code: AGPL
-  docs: CC BY-SA 4.0
-type: output only
+  docs: CC0
+type: traditional
 catagory: None
 tags:
   default:
