--- a/hello_world/config.yml
+++ b/hello_world/config.yml
@@ -4,7 +4,7 @@ author:
 date: 2021-12-26 07:00:00
 license:
   code: AGPL
-  docs: CC BY-SA 4.0
+  docs: CC0
 type: output only
 catagory: None
 tags:
